<resources>
    <string name="app_name">SOStrackingapp</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="auth_failed">Invalid password or email</string>
    <string name="username">Username</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="phone_no">Phone number</string>
    <string name="confirm_password_">Confirm Password</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="thirtysecs">10 secs</string>
    <string name="onemin">30 secs</string>
    <string name="fivemins">1 min</string>
    <string name="make_call">Call</string>
    <string name="fake_name">Enter name</string>
    <string name="fake_number">Enter phone number</string>
    <string name="title_activity_fake_ringing">FakeRingingActivity</string>
    <string name="incomingcall">Incoming Call</string>
    <string name="fakecallname">Unknown Number</string>
    <string name="fakecallnumber">080371558000</string>
    <string name="title_activity_sos">SosActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_activity_contact_tracking">Map</string>
    <string name="google_maps_key">AIzaSyCcgAmTUTcrnaQb5BCFGr8lW0YwIIOjlMM</string>
    <string name="stop_scream">Stop Screaming</string>
    <string name="add">Add</string>
    <string name="back">Back</string>
    <string name="send">Send</string>
    <string name="message">Message</string>
    <string name="setting">Setting</string>
    <string name="scream">Scream!</string>
    <string name="shake_to_activate_scream">Shake to activate scream</string>
    <string name="use_your_own_scream_sound_mp3_format_only">Use your own scream sound (mp3 format only)</string>
    <string name="police_siren">Police Siren</string>
    <string name="female_scream">female Scream</string>
    <string name="male_scream">Male Scream</string>
    <string name="audio_loop">Audio Loop</string>
    <string name="volume">Audio Volume</string>
    <string name="audio_setting">Audio Setting</string>
    <string name="audio_sound">Audio sound</string>
    <string name="save">Save</string>
    <string name="reset">Reset</string>
    <string name="select_audio_file_title">Select Audio file(mp3 only).</string>
    <string name="call_hospital">Call Hospital</string>
    <string name="call_police">Call Police</string>
    <string name="locate_nearby_hospital">Locate Nearby Hospital</string>
    <string name="locate_nearby_police">Locate Nearby Police</string>
    <string name="title_activity_emergency_map">Map</string>
    <string name="police_station">Police Station</string>
    <string name="hospital">Hospital</string>
    <string name="enable_quick_call">Enable quick call</string>
    <string name="disable_quick_call">Disable quick call</string>
    <string name="quick_call">Quick call</string>
    <string name="quick_call_setting">Quick call setting</string>
    <string name="long_press_3_sec_power_button_to_call_police">Press 5 times power button to call police</string>
    <string name="press_4_times_power_button_to_call_hospital">Press 3 times power button to call hospital</string>
    <string name="timer_option">Timer Option</string>
    <string name="enable_timer">Enable Timer</string>
    <string name="disable_timer">Disable Timer</string>
    <string name="ringtone">Ringtone</string>
    <string name="set_timer">Set Timer</string>
    <string name="caller_name">Caller name:</string>
    <string name="caller_s_phone_number">Caller phone number:</string>
    <string name="caller_detail">Caller Detail</string>
    <string name="add_voice">Add Voice</string>
    <string name="choose_file">Choose file</string>
    <string name="choose_an_audio_file_for_fake_voice_call">Choose an audio file for fake voice call</string>
    <string name="use_default_ringtone">Use Default Ringtone</string>
    <string name="use_your_own_ringtone_mp3_only">Use Your own ringtone (mp3 only)</string>
    <string name="default_1">default</string>
    <string name="default_caller_name">Dad</string>
    <string name="default_caller_phone">013-4260001</string>
    <string name="start_fake_call">Demo Call</string>
    <string name="emergency_contact">Emergency Contact</string>
    <string name="add_contact">Add Contact</string>
    <string name="enable_low_battery_alert">Enable Low Battery Alert</string>
    <string name="enable_send_sms_on_low_battery_alert">Enable Send SMS On Low Battery Alert</string>
    <string name="low_battery_alert">Low Battery Alert</string>
    <string name="delete">Delete</string>
    <string name="shake_to_send_sos_sms">Shake to send SOS SMS</string>
    <string name="title_activity_user_current_location">Map</string>
    <string name="live_gps">Live GPS</string>
    <string name="indoor_tracking">Indoor Tracking</string>
    <string name="gps_tracking">GPS Tracking</string>

</resources>