<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/live"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dp"
            android:padding="24dp"
            android:text="@string/live_gps"
            android:textSize="24sp" />

        <Button
            android:id="@+id/gps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/live"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dp"
            android:padding="24dp"
            android:text="@string/gps_tracking"
            android:textSize="24sp" />


        <Button
            android:id="@+id/indoor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/gps"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dp"
            android:padding="24dp"
            android:text="@string/indoor_tracking"
            android:textSize="24sp" />
    </RelativeLayout>

</RelativeLayout>

