<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="10dp"
    card_view:cardElevation="5dp"
    card_view:cardUseCompatPadding="true">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:background="@color/white"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@color/light_gray"
            android:layout_gravity="center_vertical"
            android:layout_margin="5dp"
            android:scaleType="fitCenter"
            android:contentDescription="@string/phone"
            android:src="@drawable/users" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:text="@string/username"
                android:textColor="@color/black"
                android:textSize="16sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_gravity="center_horizontal"
                android:weightSum="2"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:background="@color/black"
                        android:layout_margin="3dp"
                        android:contentDescription="@string/email"
                        android:src="@drawable/phone" />

                    <TextView
                        android:id="@+id/phone_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="1dp"
                        android:text="@string/phone_no"
                        android:textColor="@color/dark_gray"
                        android:textSize="12sp" />
                </LinearLayout>

            </LinearLayout>



        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>

